# eigenwatch-pipeline

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  dagster.yaml  docker-compose.yml  example.env  init-db.sql  pyproject.toml  start.sh  workplace.yaml  workspace.yaml
.telemetry/: id.yaml
alembic/: env.py
alembic/analytics/alembic/: env.py
alembic/events/migrations/: env.py
alembic/versions/: 0f7b366697fc_init.py  37097cc11d0c_change_snapshot_total_delegated_shares_.py  f56af3637dd1_init.py  f900951fad4d_initial_schema.py
src/db/models/: operators.py
src/pipeline/: definitions.py
src/pipeline/defs/: __init__.py  resources.py  schema.py
src/pipeline/sql/: aggregate_operator_state.sql
src/pipeline/utils/: calculations.py  operator_event_query.py  operator_snapshot_utils.py
src/services/: state_reconstructor.py
src/services/processors/: process_operators.py
src/services/query_builders/: allocation_state_builder.py  avs_relationship_current_builder.py  avs_relationship_history_builder.py  avs_relationship_snapshot_builder.py  base_builder.py  commission_avs_builder.py  commission_operator_set_builder.py  commission_pi_builder.py  commission_rates_snapshot_builder.py  delegator_current_builder.py  delegator_history_builder.py  delegator_shares_builder.py  delegator_shares_snapshot_builder.py  operator_daily_snapshot_builder.py  slashing_amounts_builder.py  slashing_events_cache_builder.py  (+2 more)
src/subgraph_pipeline/: definitions.py
src/utils/: debug_log.py  normalizers.py  operator_event_query.py  operator_snapshot_utils.py  sql_queries.py
(+118 files in other folders)
