[project]
name = "pipeline"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "alembic>=1.16.5",
    "dagster==1.11.10",
    "dagster-postgres>=0.25.10",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "web3>=7.13.0",
    "dagster-webserver>=1.11.10",
]

[dependency-groups]
dev = [
    "dagster-webserver==1.11.10",
    "dagster-dg-cli",
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline", "src/subgraph_pipeline"]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "pipeline"
registry_modules = [
    "pipeline.components.*",
]
